--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </div>
 
   <footer>
-    <p>@vinay_codes Calculator</p>
+    <p>@vinaytron Calculator</p>
   </footer>
 
   <script src="script.js"></script>
